# Breeze

./: .cproject  .gitignore  .project  Makefile  Makefile.am  README.md  build_all.sh  build_app.sh  build_lib.sh  build_opt.sh  configure.ac  project_def.prop  tizen-manifest.xml
inc/: Makefile.am  app_control_functions.h  breeze.h  cb_functions.h  database.h  rss_functions.h
res/edje/: Makefile.am  breeze.edc
src/: Makefile.am  app_control_functions.c  breeze.c  cb_functions.c  database.c  rss_functions.c
